--- a/app/webui/.gitignore
+++ b/app/webui/.gitignore
@@ -1,13 +1,3 @@
-# Rust
-/target/
-**/*.rs.bk
-
-# Node
-node_modules
-dist
-dist-ssr
-*.local
-
 # Logs
 logs
 *.log
@@ -17,17 +7,24 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-# Environment files
-.env
-.env.local
+node_modules
+.DS_Store
+dist
+dist-ssr
+coverage
+*.local
+
+/cypress/videos/
+/cypress/screenshots/
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
-.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+*.tsbuildinfo
