--- a/app/webui/package.json
+++ b/app/webui/package.json
@@ -5,11 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --emptyOutDir",
     "preview": "vite preview"
   },
   "dependencies": {
     "@tauri-apps/api": "^2.3.0",
+    "@tauri-apps/plugin-log": "^2.2.3",
     "vue": "^3.5.13"
   },
   "devDependencies": {
