--- a/app/webui/package.json
+++ b/app/webui/package.json
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^2.3.0",
+    "@tauri-apps/plugin-clipboard-manager": "^2.2.1",
+    "@tauri-apps/plugin-dialog": "^2.2.0",
+    "@tauri-apps/plugin-fs": "^2.2.0",
+    "@tauri-apps/plugin-global-shortcut": "^2.2.0",
     "@tauri-apps/plugin-log": "^2.2.3",
+    "@tauri-apps/plugin-notification": "^2.2.1",
     "vue": "^3.5.13"
   },
   "devDependencies": {
