--- a/package.json
+++ b/package.json
@@ -6,19 +6,24 @@
   "author": "xiehuqiqi",
   "license": "MIT",
   "packageManager": "pnpm@10.5.2",
-  "description": "",
+  "description": "✨ 文狐の小工具库 | A collection of tools for Wenhu",
   "scripts": {
     "dev:webui": "pnpm run -F @wenfox/webui dev",
     "build:webui": "pnpm run -F @wenfox/webui build",
     "tauri": "tauri",
     "tauri:dev": "concurrently -n WEBUI,TAURI -c blue,red \"pnpm run dev:webui\" \"pnpm run tauri dev\"",
-    "tauri:build": "pnpm run tauri build"
+    "tauri:build": "pnpm run tauri build",
+    "format:rs": "cargo fmt",
+    "format:webui": "pnpm -F @wenfox/webui exec prettier --write .",
+    "format": "pnpm format:rs && pnpm format:webui"
   },
   "dependencies": {
     "@tauri-apps/api": "^2.3.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2.3.1",
-    "concurrently": "^9.1.2"
+    "concurrently": "^9.1.2",
+    "eslint-config-prettier": "^10.0.2",
+    "prettier": "^3.5.3"
   }
 }
