--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,16 +1,16 @@
 [package]
-authors = ["xiehuqiqi"]
+authors = ["suyufox"]
 description = "✨ 文狐の小工具库 | A collection of tools for Wenhu"
 edition = "2021"
 license = 'MIT'
 name = "wenfox"
-repository = "https://github.com/xiehuqiqi/wenfox"
+repository = "https://github.com/suyufox/wenfox"
 rust-version = "1.77.2"
 version = "0.1.0"
 
 [build-dependencies]
 chrono = "0.4.40"
-tauri-build = {version = "2.0.5", features = [] }
+tauri-build = {version = "2.0.5", features = []}
 
 [dependencies]
 chrono = "0.4.40"
@@ -18,10 +18,10 @@ chrono = "0.4.40"
 colored = "3.0.0"
 # lazy_static = "1.5.0"
 log = "0.4.26"
-serde = {version = "1.0", features = ["derive"] }
+serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 # serde_yaml = "0.9.34"
-tauri = {version = "2.3.1", features = [] }
+tauri = {version = "2.3.1", features = []}
 tauri-plugin-clipboard-manager = "2.2.1"
 tauri-plugin-deep-link = "2"
 tauri-plugin-dialog = "2.2.0"
@@ -46,7 +46,7 @@ wenfox-plugins = {path = "../libs/plugins"}
 wenfox-quest = {path = "../libs/quest"}
 wenfox-server = {path = "../libs/server"}
 # thiserror = "2.0.12"
-tokio = {version = "1.44.0", features = ["full"] }
+tokio = {version = "1.44.0", features = ["full"]}
 # toml = "0.8.20"
 # uuid = {version = "1.15.1", features = ["v4", "serde"] }
 # warp = "0.3.7"
@@ -54,6 +54,6 @@ tokio = {version = "1.44.0", features = ["full"] }
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-global-shortcut = "2.2.0"
-tauri-plugin-single-instance = {version = "2.0.0", features = ["deep-link"] }
+tauri-plugin-single-instance = {version = "2.0.0", features = ["deep-link"]}
 tauri-plugin-updater = "2"
 tauri-plugin-window-state = "2"
