--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,30 @@
 [workspace]
 members = [
-  "libs/configs",
-  "libs/locale",
-  "libs/plugins",
-  "libs/quest",
-  "libs/server",
   "src-tauri",
+  "crates/server",
 ]
 resolver = "2"
 
+[workspace.dependencies]
+chrono = "0.4.40"
+clap = {version = "4.5.31", features = ["derive"]}
+colored = "3.0.0"
+lazy_static = "1.5.0"
+log = "0.4.26"
+serde = {version = "1.0", features = ["derive"]}
+serde_json = "1.0"
+serde_yaml = "0.9.34"
+tokio = {version = "1.44.0", features = ["full"]}
+toml = "0.8.20"
+uuid = {version = "1.15.1", features = ["v4", "serde"]}
+
 [profile.dev]
+lto = "thin" # 新增：启用薄LTO优化
 opt-level = 1 # 基础优化平衡编译速度与内存使用
 split-debuginfo = "packed" # 压缩调试信息减少内存占用
+
+[profile.release]
+codegen-units = 1
+lto = true
+opt-level = 3
+panic = "abort"
